--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
     "graphql": "^14.1.1"
   }
 }
