--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "apollo-server": "^2.4.8",
     "apollo-server-express": "^2.4.8",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
-    "graphql": "^14.1.1"
+    "graphql": "^14.1.1",
+    "lodash": "^4.17.11"
   }
 }
